[gd_scene load_steps=15 format=3 uid="uid://gg5d0kkcpoey"]

[ext_resource type="Shader" path="res://Shaders/pause_menu.gdshader" id="1_cqo7l"]
[ext_resource type="Script" path="res://Scripts/GUI/pause_menu.gd" id="1_mbdmb"]
[ext_resource type="Texture2D" uid="uid://d1wlvrndak0j5" path="res://Assets/Arts/Gui/Animated Tablets/Tablet.png" id="2_x5g13"]
[ext_resource type="FontFile" uid="uid://c33jywaea07wv" path="res://Assets/Arts/Gui/Cyberphont/Cyberphont beta/Cyberphont_pixels.ttf" id="3_nghtd"]
[ext_resource type="Texture2D" uid="uid://iy7ecswsckof" path="res://Assets/Arts/Gui/Text ScreenPads/scalable_Text_screen.png" id="4_8c7u8"]
[ext_resource type="FontFile" uid="uid://dyqoacn20kknd" path="res://Assets/Arts/Gui/Cyberphont/Cyberphont 2.0/Cyberphont 2.0.ttf" id="5_4pbly"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_exq0e"]
shader = ExtResource("1_cqo7l")
shader_parameter/amount = 1.471

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5ue2v"]
texture = ExtResource("2_x5g13")

[sub_resource type="Theme" id="Theme_4ql4f"]
Panel/styles/panel = SubResource("StyleBoxTexture_5ue2v")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_abocp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4v58w"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7foau"]
texture = ExtResource("4_8c7u8")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8pqne"]
texture = ExtResource("4_8c7u8")

[sub_resource type="Theme" id="Theme_ktn46"]
default_font = ExtResource("5_4pbly")
default_font_size = 0
Button/colors/font_color = Color(0.501961, 0.956863, 1, 1)
Button/colors/font_disabled_color = Color(0.875, 0.875, 0.875, 0.5)
Button/colors/font_focus_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_color = Color(0.95, 0.95, 0.95, 1)
Button/colors/font_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/font_outline_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(0.501961, 0.956863, 1, 1)
Button/colors/icon_disabled_color = Color(1, 1, 1, 0.4)
Button/colors/icon_focus_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_color = Color(1, 1, 1, 1)
Button/colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
Button/colors/icon_normal_color = Color(0.501961, 0.956863, 1, 1)
Button/colors/icon_pressed_color = Color(0, 0.552941, 0.984314, 1)
Button/constants/h_separation = 5
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 50
Button/fonts/font = ExtResource("3_nghtd")
Button/styles/disabled = SubResource("StyleBoxTexture_abocp")
Button/styles/focus = SubResource("StyleBoxTexture_4v58w")
Button/styles/hover = SubResource("StyleBoxTexture_7foau")
Button/styles/normal = SubResource("StyleBoxTexture_7foau")
Button/styles/pressed = SubResource("StyleBoxTexture_8pqne")

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mbdmb")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_exq0e")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(29.6821, 17.0937)

[node name="Panel" type="Panel" parent="."]
process_mode = 3
texture_filter = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -411.0
offset_top = -257.0
offset_right = 589.0
offset_bottom = 345.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.826351, 0.826186)
theme = SubResource("Theme_4ql4f")

[node name="Control" type="Control" parent="Panel"]
process_mode = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -476.0
offset_top = -262.0
offset_right = 472.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ktn46")

[node name="ResumeButton" type="Button" parent="Panel/Control"]
texture_filter = 3
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 60.0
offset_right = 150.0
offset_bottom = 360.0
grow_horizontal = 2
rotation = 0.00265048
scale = Vector2(1.23925, 0.544463)
text = "Play"

[node name="Quit" type="Button" parent="Panel/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -267.0
offset_right = 150.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 0
rotation = 0.00265048
scale = Vector2(1.239, 0.544)
tooltip_text = "This is quit"
text = "Quit"

[connection signal="pressed" from="Panel/Control/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/Control/Quit" to="." method="_on_quit_pressed"]
